[package]
name = "pke_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.22"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rug = "1.26.1"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "rsa"
harness = false

[[bench]]
name = "rsapkcs15"
harness = false

[[bench]]
name = "el_gamal"
harness = false

[[bench]]
name = "paillier"
harness = false